# Turbo-File-Explorer

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  volume.rs
src/Layout/: AppLayout.tsx
src/components/: ContextMenu.tsx  Drive.tsx  FileList.tsx  FolderList.tsx  QuickAccess.tsx  SearchBar.tsx  SearchBar.tsx.crswap  SearchList.tsx
src/context/: globalPathContext.tsx
